--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Sundara Looks | Passionate about your Grooming</title>
+        <title>Home Stay Booking</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
